--- a/styles/style.css
+++ b/styles/style.css
@@ -7,16 +7,21 @@
 }
 
 .header {
+  margin-top: 0;
+  margin-bottom: 0;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   display: flex;
   align-items: center;
   background-color: #f2f2f2;
+  z-index: 1;
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
+  width: 100%;
   margin-left: 64px;
   font-size: 102px;
   font-weight: 700;
@@ -25,18 +30,26 @@
 }
 
 .header__subtitle {
-  width: 388px;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 388px;
+  width: 100%;
   position: absolute;
   left: 64px;
   bottom: 30px;
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
+  z-index: 2;
 }
 
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.header__link:hover {
+  text-decoration: underline;
 }
 
 .header__main-illustration {
@@ -85,12 +98,13 @@
   width: 80%;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
 }
 
 .two-columns__brief {
-  
-  width: 175px;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 175px;
+  width: 100%;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -127,7 +141,7 @@
   padding-bottom: 100px;
 }
 
-.section__title {
+.section-title {
   width: 60%;
   margin: 0 auto 20px;
   text-align: center;
@@ -136,7 +150,7 @@
   font-weight: 700;
 }
 
-.section__subtitle {
+.section-subtitle {
   width: 60%;
   margin: 0 auto;
   text-align: center;
@@ -146,6 +160,7 @@
 }
 
 .table {
+  padding-left: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -163,15 +178,21 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 700;
+  margin-top: 0;
   margin-bottom: 20px;
 }
 
 .table__text {
   display: inline-block;
+  margin-top: 0;
   margin-bottom: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+}
+
+.table__text:last-child {
+  margin-bottom: 0;
 }
 
 .feynman {
@@ -180,14 +201,15 @@
   background-repeat: no-repeat;
   background-position: bottom left;
   position: relative;
-  height: 890px;
+  min-height: 890px;
 }
 
 
 .feynman__title {
   display: block;
   box-sizing: border-box;
-  width: 648px;
+  max-width: 648px;
+  width: 100%;
   padding-top: 100px;
   margin: 0 auto;
   text-align: center;
@@ -199,6 +221,7 @@
 .feynman__subtitle {
   text-align: center;
   margin-top: 70px;
+  margin-bottom: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -207,12 +230,16 @@
 .feynman__link {
   position: absolute;
   top: 50%;
-  right: 40px;
+  right: 48px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
+}
+
+.feynman__link:hover {
+  text-decoration: underline;
 }
 
 .kaufman {
@@ -221,6 +248,7 @@
   padding-bottom: 90px;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -231,12 +259,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 1;
-}
-
-.section_position_foreground {
-  position: relative;
-  z-index: 2;
+  z-index: -1;
 }
 
 .section__title_theme_dark {
@@ -273,11 +296,11 @@
 .footer {
   background: #1f1f1f;
   color: white;
+  box-sizing: border-box;
   min-height: 350px;
   padding-top: 60px;
   padding-bottom: 40px;
 }
-
 
 .footer__columns {
   display: flex;
@@ -285,11 +308,15 @@
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+  min-height: 250px;
+}
+
+.footer__column {
+  display: flex;
+  flex-flow: column;
 }
 
 .footer__column_content_copyright {
-  display: flex;
-  flex-flow: column;
   flex-basis: 711px;
   justify-content: space-between;
 }
@@ -303,14 +330,10 @@
 }
 
 .footer__column_content_info {
-  display: flex;
-  flex-flow: column;
   justify-content: flex-start;
 }
 
 .footer__column_content_social {
-  display: flex;
-  flex-flow: column;
   justify-content: flex-start;
 }
 
@@ -331,6 +354,7 @@
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  margin-right: 10px;
 }
 
 .footer__column-link {
@@ -339,4 +363,8 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+}
+
+.footer__column-link:hover {
+  text-decoration: underline;
 }
